tests/pass/0003_multipleprints.ee
fn main() {
    debugPrint(1);
    debugPrint(2);
    debugPrint(3);
}
