tests/fail/0005_missing_semicolon.ee
fn main() {
    debugPrint(1)
}
